# jvm-rs

./: .gitignore  Cargo.toml  log4rs.yaml  readme.md
src/: main.rs
src/classfile/: attribute_info.rs  class_file.rs  class_reader.rs  constant_pool.rs  member_info.rs  mod.rs
src/classpath/: classpath.rs  entry.rs  entry_composite.rs  entry_dir.rs  entry_wildcard.rs  entry_zip.rs  mod.rs
src/instructions/: factory.rs  interpreter.rs  mod.rs
src/instructions/base/: branch.rs  bytecode_reader.rs  class_init.rs  instruction.rs  method_invoke.rs  mod.rs
src/instructions/comparisons/: dcmp.rs  fcmp.rs  if_acmp.rs  if_icmp.rs  ifcond.rs  lcmp.rs
src/instructions/constants/: consts.rs  ipush.rs  ldc.rs  mod.rs  nop.rs
src/instructions/control/: goto.rs  lookupswitch.rs  mod.rs  returns.rs  tableswitch.rs
src/instructions/conversions/: d2x.rs  f2x.rs  i2x.rs  l2x.rs  mod.rs
src/instructions/extended/: goto_w.rs  ifnull.rs  wide.rs
src/instructions/loads/: aload.rs  dload.rs  fload.rs  iload.rs  lload.rs  mod.rs  xload.rs
src/instructions/math/: add.rs  and.rs  div.rs  iinc.rs  mul.rs  neg.rs  or.rs  rem.rs  sh.rs  sub.rs  xor.rs
src/instructions/reference/: anewarray.rs  arraylength.rs  athrow.rs  checkcast.rs  getfield.rs  getstatic.rs  instanceof.rs  invokeinterface.rs  invokespecial.rs  invokestatic.rs  invokevirtual.rs  mod.rs  multianewarray.rs  new.rs  newarray.rs  putfield.rs  putstatic.rs
src/instructions/reserved/: mod.rs  (+1 more)
src/native/: mod.rs  registry.rs
src/runtime/: local_vars.rs  mod.rs  operand_stack.rs  thread.rs
src/utils/: list.rs
(+33 files in other folders)
