[package]
name = "jvm"
version = "0.1.0"
authors = ["lagrange <1543300936@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
zip = "0.5.5"
walkdir = "2"
log = "0.4.8"
log4rs = "0.10.0"
byteorder = "1.2.7"
phf = { version = "0.9", features = ["macros"] }